--- a/index.html
+++ b/index.html
@@ -1,183 +1,228 @@
 <!DOCTYPE HTML>
-<!--
-	Solid State by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
-	<head>
-		<title>Creative Nails & Spa</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
 
-		<!-- Page Wrapper -->
-			<div id="page-wrapper">
+<head>
+	<title>Creative Nails & Spa</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<link rel="stylesheet" href="assets/css/main.css" />
+	<noscript>
+		<link rel="stylesheet" href="assets/css/noscript.css" />
+	</noscript>
+</head>
 
-				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Creative Nails & Spa</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+<body class="is-preload">
 
-				<!-- Menu -->
-					<nav id="menu">
-						<div class="inner">
-							<h2>Menu</h2>
-							<ul class="links">
-								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Gift Cards</a></li>
-								<li><a href="elements.html">Book Appointments</a></li>
-								<li><a href="#">About Us</a></li>
-								<li><a href="#">Sign Up For Our Newsletter! </a></li>
-							</ul>
-							<a href="#" class="close">Close</a>
+	<!-- Page Wrapper -->
+	<div id="page-wrapper">
+
+		<!-- Header -->
+		<header id="header" class="alt">
+			<h1><a href="index.html">Creative Nails & Spa</a></h1>
+			<nav>
+				<a href="#menu">Menu</a>
+			</nav>
+		</header>
+
+		<!-- Menu -->
+		<nav id="menu">
+			<div class="inner">
+				<h2>Menu</h2>
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="services.html">Services</a></li>
+					<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
+					<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
+					<li><a href="#">About Us</a></li>
+					<li><a href="#">Sign Up For Our Newsletter!</a></li>
+				</ul>
+				<a href="#" class="close">Close</a>
+			</div>
+		</nav>
+
+		<!-- Banner -->
+		<section id="banner">
+			<div class="form">
+				<div class="inner hero">
+					<div class="logo"><img src="images/logo.webp"></a></div>
+					<h2 class="major">Subscribe to our Newsletter!</h2>
+					<form method="post" action="#">
+						<div class="subscribers">
+							<div class="subscriber">
+								<label for="name">Name</label>
+								<input type="text" name="name" id="name" />
+							</div>
+							<div class="subscriber">
+								<label for="email">Email</label>
+								<input type="email" name="email" id="email" />
+							</div>
 						</div>
-					</nav>
-
-				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
-							<h2>Creative Nails & Spa</h2>
-							<p>Another free + fully responsive site template by <a href="http://html5up.net">HTML5 UP</a></p>
-						</div>
-					</section>
-
-				<!-- Wrapper -->
-					<section id="wrapper">
-
-						<!-- One -->
-							<section id="one" class="wrapper spotlight style1">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic01.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Magna arcu feugiat</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Two -->
-							<section id="two" class="wrapper alt spotlight style2">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Tempus adipiscing</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three" class="wrapper spotlight style3">
-								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
-									<div class="content">
-										<h2 class="major">Nullam dignissim</h2>
-										<p>Lorem ipsum dolor sit amet, etiam lorem adipiscing elit. Cras turpis ante, nullam sit amet turpis non, sollicitudin posuere urna. Mauris id tellus arcu. Nunc vehicula id nulla dignissim dapibus. Nullam ultrices, neque et faucibus viverra, ex nulla cursus.</p>
-										<a href="#" class="special">Learn more</a>
-									</div>
-								</div>
-							</section>
-
-						<!-- Four -->
-							<section id="four" class="wrapper alt style1">
-								<div class="inner">
-									<h2 class="major">Vitae phasellus</h2>
-									<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-									<section class="features">
-										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic06.jpg" alt="" /></a>
-											<h3 class="major">Ante fermentum</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic07.jpg" alt="" /></a>
-											<h3 class="major">Fusce consequat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-									</section>
-									<ul class="actions">
-										<li><a href="#" class="button">Browse All</a></li>
-									</ul>
-								</div>
-							</section>
-
-					</section>
-
-				<!-- Footer -->
-					<section id="footer">
-						<div class="inner">
-							<h2 class="major">Get in touch</h2>
-							<p>Cras mattis ante fermentum, malesuada neque vitae, eleifend erat. Phasellus non pulvinar erat. Fusce tincidunt, nisl eget mattis egestas, purus ipsum consequat orci, sit amet lobortis lorem lacus in tellus. Sed ac elementum arcu. Quisque placerat auctor laoreet.</p>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field">
-										<label for="email">Email</label>
-										<input type="email" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="4"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" /></li>
-								</ul>
-							</form>
-							<ul class="contact">
-								<li class="icon solid fa-home">
-									Untitled Inc<br />
-									1234 Somewhere Road Suite #2894<br />
-									Nashville, TN 00000-0000
-								</li>
-								<li class="icon solid fa-phone">(000) 000-0000</li>
-								<li class="icon solid fa-envelope"><a href="#">information@untitled.tld</a></li>
-								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
-								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
-								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</section>
-
+						<ul class="actions">
+							<li><input type="submit" value="Subscribe!" /></li>
+						</ul>
+					</form>
+				</div>
 			</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		</section>
 
-	</body>
+		<!-- Wrapper -->
+		<section id="wrapper">
+
+			<!-- One -->
+			<section id="one" class="wrapper spotlight style1">
+				<div class="inner">
+					<a href="https://www.creativenailsnspa.com/clover" class="image"><img src="images/clover.png" alt="" /></a>
+					<div class="content">
+						<h2 class="major">Creative X Clover Rewards</h2>
+						<p>Join Our Rewards Program on Clover!</p>
+						<a href="https://www.creativenailsnspa.com/clover" class="special">Learn more</a>
+					</div>
+				</div>
+			</section>
+
+			<!-- Two -->
+			<section id="two" class="wrapper alt spotlight style2">
+				<div class="inner">
+					<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="image"><img src="images/appts.png" alt="" /></a>
+					<div class="content">
+
+						<h2 class="major" style="color:#5b5b5b">Book An Appointment Online</h2>
+						<p style="color:#5b5b5b">Schedule ahead on your own time.</p>
+						<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="special"
+							style="color:#5b5b5b">Book Now</a>
+
+
+					</div>
+				</div>
+			</section>
+
+			<!-- Three -->
+			<section id="three" class="wrapper spotlight style3">
+				<div class="inner">
+					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+					<div class="content">
+						<h2 class="major" style="color:#5b5b5b">Serene @ Park Avenue</h2>
+						<p style="color:#7f7f7f">Learn about the new addition to our Worcester location</p>
+						<a href="#" class="special" style="color:#515151">LEARN MORE</a>
+					</div>
+				</div>
+			</section>
+			<!-- Four -->
+			<section id="two" class="wrapper alt spotlight style5">
+				<div class="inner">
+					<a href="services.html" class="image"><img src="images/services.png" alt="" /></a>
+					<div class="content">
+
+						<h2 class="major" style="color:#5b5b5b">Services</h2>
+						<p style="color:#5b5b5b">Your satisfaction is our top priority. Our highly experienced and skillful technicians will lead you to a new level of comfort...</p>
+						<a href="services.html" class="special" style="color:#5b5b5b">See Services</a>
+
+
+					</div>
+				</div>
+			</section>
+			<section id="three" class="wrapper spotlight style6">
+				<div class="inner">
+					<a href="#" class="image"><img src="images/paper-plane.svg" alt="" /></a>
+					<div class="content">
+						<h2 class="major" style="color:#5b5b5b">Mailing List</h2>
+						<p style="color:#7f7f7f">Join our mailing list and we'll keep you updated on
+							promos, special events, discounts, updates, and more! </p>
+						<a href="#" class="special" style="color:#515151">SUBSCRIBE NOW</a>
+					</div>
+				</div>
+			</section>
+			<!-- Five -->
+			<section id="four" class="wrapper alt style1">
+				<div class="inner">
+					<h2 class="major">Come Visit Us</h2>
+					<section class="features">
+						<article>
+							<a href="#" class="image"><img src="images/parkave.webp" alt="" /></a>
+							<h3 class="major">Worcester</h3>
+							<ul class="contact">
+								<li class="icon solid fa-home">
+									194 Park Avenue<br />
+									Worcester, MA 01604
+								</li>
+								<li class="icon solid fa-phone">(508) 852-7666</li>
+								<li class="icon brands fa-facebook-f"><a
+										href="https://www.facebook.com/Creative-Nails-Spa-Worcester-428942200591523">Facebook</a>
+								</li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/shrewsbury.webp" alt="" /></a>
+							<h3 class="major">Shrewsbury</h3>
+							<ul class="contact">
+								<li class="icon solid fa-home">
+									50 Turnpike Road<br />
+									Shrewsbury, MA 01545
+								</li>
+								<li class="icon solid fa-phone">(508) 799-0258</li>
+								<li class="icon brands fa-facebook-f"><a
+										href="https://www.facebook.com/creativenailsnspashrewsbury">Facebook</a></li>
+							</ul>
+						</article>
+						<article>
+							<a href="#" class="image"><img src="images/milbury.webp" alt="" /></a>
+							<h3 class="major">Blackstone Valley</h3>
+							<ul class="contact">
+								<li class="icon solid fa-home">
+									70 Worcester-Providence Turnpike<br />
+									Millbury, MA, 01527
+								</li>
+								<li class="icon solid fa-phone">(508) 865-4900</li>
+								<li class="icon brands fa-facebook-f"><a
+										href="https://www.facebook.com/CreativeNailsnSpaMillbury">Facebook</a></li>
+							</ul>
+						</article>
+					</section>
+				</div>
+			</section>
+
+		</section>
+
+		<!-- Footer -->
+		<section id="footer">
+			<div class="inner">
+				<h2 class="major">Get in touch</h2>
+				<form method="post" action="#">
+					<div class="fields">
+						<div class="field">
+							<label for="name">Name</label>
+							<input type="text" name="name" id="name" />
+						</div>
+						<div class="field">
+							<label for="email">Email</label>
+							<input type="email" name="email" id="email" />
+						</div>
+						<div class="field">
+							<label for="message">Message</label>
+							<textarea name="message" id="message" rows="4"></textarea>
+						</div>
+					</div>
+					<ul class="actions">
+						<li><input type="submit" value="Send Message" /></li>
+					</ul>
+				</form>
+				<ul class="copyright">
+					<li>&copy; Priority Nails LLC. All rights reserved.</li>
+				</ul>
+			</div>
+		</section>
+
+	</div>
+
+	<!-- Scripts -->
+	<script src="assets/js/jquery.min.js"></script>
+	<script src="assets/js/jquery.scrollex.min.js"></script>
+	<script src="assets/js/browser.min.js"></script>
+	<script src="assets/js/breakpoints.min.js"></script>
+	<script src="assets/js/util.js"></script>
+	<script src="assets/js/main.js"></script>
+
+</body>
+
 </html>
