--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 		<section id="banner">
 			<div class="form">
 				<div class="inner hero">
-					<div class="logo"><img src="images/logo.webp"></a></div>
+					<div class="logo"><img src="images/logo.webp" style="width: 20%;"></a></div>
 					<h2 class="major">Subscribe to our Newsletter!</h2>
 					<form method="post" action="#">
 						<div class="subscribers">
