footer bg, banner logo

--- a/index.html
+++ b/index.html
@@ -42,26 +42,8 @@
 
 		<!-- Banner -->
 		<section id="banner">
-			<div class="form">
-				<div class="inner hero">
-					<div class="logo"><img src="images/logo.webp" style="width: 20%;"></a></div>
-					<h2 class="major">Subscribe to our Newsletter!</h2>
-					<form method="post" action="#">
-						<div class="subscribers">
-							<div class="subscriber">
-								<label for="name">Name</label>
-								<input type="text" name="name" id="name" />
-							</div>
-							<div class="subscriber">
-								<label for="email">Email</label>
-								<input type="email" name="email" id="email" />
-							</div>
-						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Subscribe!" /></li>
-						</ul>
-					</form>
-				</div>
+				<div class="inner">
+					<img class="logo" src="images/logo.png" alt="" style="width: 400px"/>
 			</div>
 
 		</section>
@@ -100,7 +82,7 @@
 			<!-- Three -->
 			<section id="three" class="wrapper spotlight style3">
 				<div class="inner">
-					<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+					<a href="#" class="image"><img src="images/serene.jpg" alt="" /></a>
 					<div class="content">
 						<h2 class="major" style="color:#5b5b5b">Serene @ Park Avenue</h2>
 						<p style="color:#7f7f7f">Learn about the new addition to our Worcester location</p>
@@ -134,7 +116,7 @@
 				</div>
 			</section>
 			<!-- Five -->
-			<section id="four" class="wrapper alt style1">
+			<section id="four" class="wrapper alt style7">
 				<div class="inner">
 					<h2 class="major">Come Visit Us</h2>
 					<section class="features">
