--- a/serene.html
+++ b/serene.html
@@ -13,12 +13,10 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header">
+					<h1><a href="index.html" ><img src="/images/logowhite.png" id="logo-header"> </a></h1>
+					<nav><a href="#menu">Menu</a></nav>
+				</header>
 
 				<!-- Menu -->
 				<nav id="menu">
@@ -29,7 +27,7 @@
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 							<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
-							<li><a href="#">About Us</a></li>
+							<li><a href="aboutus.html">About Us</a></li>
 							<li><a href="#">Sign Up For Our Newsletter!</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
@@ -113,8 +111,8 @@
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
 							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<ul class="copyright" style="margin-top: 40%">
+								<li>&copy; Priority Nails LLC. All rights reserved.</li>
 							</ul>
 						</div>
 					</section>
