--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 		<!-- Header -->
 		<header id="header" class="alt">
-			<h1><a href="index.html" ><img src="/images/logowhite.png" id="logo-header"> </a></h1>
+			<h1><a href="index.html" ><img src="../../images/logowhite.png" id="logo-header"> </a></h1>
 			<nav><a href="#menu">Menu</a></nav>
 		</header>
 
