--- a/serene.html
+++ b/serene.html
@@ -14,7 +14,7 @@
 
 				<!-- Header -->
 				<header id="header">
-					<h1><a href="index.html" ><img src="/images/logowhite.png" id="logo-header"> </a></h1>
+					<h1><a href="index.html" ><img src="../../images/logowhite.png" id="logo-header"> </a></h1>
 					<nav><a href="#menu">Menu</a></nav>
 				</header>
 
