changed img formats, static site for mobile

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 					<h2 class="major">Come Visit Us</h2>
 					<section class="features">
 						<article>
-							<a class="image"><img src="images/parkave.webp" alt="" /></a>
+							<a class="image"><img src="images/parkave.jpg" alt="" /></a>
 							<h3 class="major">Worcester</h3>
 							<ul class="contact">
 								<li class="icon solid fa-home">
@@ -146,7 +146,7 @@
 							</ul>
 						</article>
 						<article>
-							<a class="image"><img src="images/shrewsbury.webp" alt="" /></a>
+							<a class="image"><img src="images/shrewsbury.jpg" alt="" /></a>
 							<h3 class="major">Shrewsbury</h3>
 							<ul class="contact">
 								<li class="icon solid fa-home">
@@ -159,12 +159,12 @@
 							</ul>
 						</article>
 						<article>
-							<a class="image"><img src="images/milbury.webp" alt="" /></a>
+							<a class="image"><img src="images/milbury.jpg" alt="" /></a>
 							<h3 class="major">Blackstone Valley</h3>
 							<ul class="contact">
 								<li class="icon solid fa-home">
 									70 Worcester-Providence Turnpike<br />
-									Millbury, MA, 01527
+									Millbury, MA 01527
 								</li>
 								<li class="icon solid fa-phone">(508) 865-4900</li>
 								<li class="icon brands fa-facebook-f"><a
@@ -202,7 +202,7 @@
 					</ul>
 				</form>
 				<ul class="copyright">
-					<li>&copy; Priority Nails LLC. All rights reserved.</li>
+					<li>&copy;2022 Priority Nails LLC. All rights reserved.</li>
 				</ul>
 			</div>
 		</section>
