mobile responsive banner logo

--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 					<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 					<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
 					<li><a href="aboutus.html">About Us</a></li>
-					<li><a href="#">Sign Up For Our Newsletter!</a></li>
 				</ul>
 				<a href="#" class="close">Close</a>
 			</div>
@@ -67,7 +66,8 @@
 					<div class="content">
 
 						<h2 class="major" style="color:#5b5b5b">Book An Appointment Online</h2>
-						<p style="color:#5b5b5b">Schedule ahead on your own time.</p>
+						<p style="color:#5b5b5b">Schedule ahead on your own time.<br>
+						(Please note: Requests for specific technicians must be done by <span style="font-weight: bold;">PHONE</span>. Please give us a call at your preferred locations to schedule an appointment) </p>
 						<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="special"
 							style="color:#5b5b5b">Book Now</a>
 
