fixed subscribe form and onhovers

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="content">
 						<h2 class="major">Creative <span style="color: green; font-weight: bold">X</span>  Clover Rewards</h2>
 						<p>Join Our Rewards Program on Clover!</p>
-						<a href="https://www.creativenailsnspa.com/clover" class="special">Learn more</a>
+						<a href="https://www.creativenailsnspa.com/clover" class="special ccolor">Learn more</a>
 					</div>
 				</div>
 			</section>
@@ -66,8 +66,7 @@
 					<div class="content">
 
 						<h2 class="major" style="color:#5b5b5b">Book An Appointment Online</h2>
-						<p style="color:#5b5b5b">Schedule ahead on your own time.<br>
-						(Please note: Requests for specific technicians must be done by <span style="font-weight: bold;">PHONE</span>. Please give us a call at your preferred locations to schedule an appointment) </p>
+						<p style="color:#5b5b5b">Schedule ahead on your own time.</p>
 						<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="special"
 							style="color:#5b5b5b">Book Now</a>
 
@@ -81,9 +80,9 @@
 				<div class="inner">
 					<a href="serene.html" class="image"><img src="images/serene.jpg" alt="" /></a>
 					<div class="content">
-						<h2 class="major" style="color:#5b5b5b">Serene @ Park Avenue</h2>
+						<h2 class="major" style="color:#5b5b5b">Serene <span style="color:#fab88a">@</span> Park Avenue</h2>
 						<p style="color:#7f7f7f">Learn about the newest addition to our Worcester location</p>
-						<a href="serene.html" class="special" style="color:#515151">LEARN MORE</a>
+						<a href="serene.html" class="special scolor">LEARN MORE</a>
 					</div>
 				</div>
 			</section>
@@ -94,7 +93,7 @@
 					<div class="content">
 
 						<h2 class="major" style="color:#5b5b5b">Services</h2>
-						<p style="color:#5b5b5b">Your satisfaction is our top priority. Our experienced and skillful technicians will lead you to a new level of comfort.</p>
+						<p style="color:#5b5b5b">Your satisfaction is our top priority. Our experienced and skillful technicians will lead you to a new level of comfort and beauty.</p>
 						<a href="services.html" class="special" style="color:#5b5b5b">See Services</a>
 
 
@@ -112,15 +111,15 @@
 								<div class="fields" >
 									<div class="field">
 										<label for="name" style="color:#7f7f7f; ">Name</label>
-										<input type="text" name="name" id="name" />
+										<input style="background-color:#c0c0c0" type="text" name="name" id="name" />
 									</div>
 									<div class="field">
 										<label for="email" style="color:#7f7f7f">Email</label>
-										<input type="email" name="email" id="email" />
+										<input style="background-color:#c0c0c0" type="email" name="email" id="email" />
 									</div>
 								</div>
 								<ul class="actions">
-									<li><input type="submit" value="SUBSRIBE NOW" /></li>
+									<li><input class="submit submitalt" type="submit" value="SUBSRIBE NOW"/></li>
 								</ul>
 							</form>
 					</div>
@@ -198,7 +197,7 @@
 						</div>
 					</div>
 					<ul class="actions">
-						<li><input type="submit" value="Send Message" /></li>
+						<li><input class="submit" type="submit" value="Send Message" /></li>
 					</ul>
 				</form>
 				<ul class="copyright">
