added locations page, mobile static jpg

--- a/aboutus.html
+++ b/aboutus.html
@@ -21,14 +21,13 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<div class="inner">
-						<h2>Menu</h2>
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="locations.html">Location & Hours</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 							<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">Sign Up For Our Newsletter!</a></li>
+							<li><a href="aboutus.html">About Us</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
 					</div>
@@ -43,7 +42,8 @@
 							<div class="wrapper">
 								<div class="inner">
 									<h3 class="major">About Us</h3>
-									<p>When it comes to feeling luxurious, Creative Nails & Spa provides the services you need with the customer service you expect.  Our salons in Millbury, Shrewsbury and Worcester staff a team of knowledgeable, trained, and experienced technicians who are dedicated to providing the best experience possible. </p>
+									<p>When it comes to feeling luxurious, Creative Nails & Spa provides the services you need with the customer service you expect.</p>
+									<p> Our salons in Millbury, Shrewsbury and Worcester staff a team of knowledgeable, trained, and experienced technicians who are dedicated to providing the best experience possible. </p>
 									<p>Our nail spa offers quality manicures, pedicures, and acrylics to give you the look, confidence, and peace you've been searching for.</p>
 
 									<!-- <h3 class="major">Vitae phasellus</h3> -->
