--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 		<!-- Menu -->
 		<nav id="menu">
 			<div class="inner">
-				<h2>Menu</h2>
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
+					<li><a href="locations.html">Location & Hours</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 					<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
@@ -53,7 +53,7 @@
 					<a href="https://www.creativenailsnspa.com/clover" class="image"><img src="images/clover.png" alt="" /></a>
 					<div class="content">
 						<h2 class="major">Creative <span style="color: green; font-weight: bold">X</span>  Clover Rewards</h2>
-						<p>Join Our Rewards Program on Clover!</p>
+						<p>Reach <span style="text-decoration:underline">100 points</span> to receive a disocunt on your next spa day! <br>Join our Rewards Program on Clover now.</p>
 						<a href="https://www.creativenailsnspa.com/clover" class="special ccolor">Learn more</a>
 					</div>
 				</div>
@@ -78,7 +78,7 @@
 			<!-- Three -->
 			<section id="three" class="wrapper spotlight style3">
 				<div class="inner">
-					<a href="serene.html" class="image"><img src="images/serene.jpg" alt="" /></a>
+					<a href="serene.html" class="image"><img src="images/pedi.jpg" alt="" style="margin-bottom: 20px"/></a>
 					<div class="content">
 						<h2 class="major" style="color:#5b5b5b">Serene <span style="color:#fab88a">@</span> Park Avenue</h2>
 						<p style="color:#7f7f7f">Learn about the newest addition to our Worcester location</p>
@@ -171,6 +171,7 @@
 							</ul>
 						</article>
 					</section>
+					<a href="locations.html" class="special">Locations & Hours</a>
 				</div>
 			</section>
 
