--- a/services.html
+++ b/services.html
@@ -26,9 +26,9 @@
 				<!-- Menu -->
 				<nav id="menu">
 					<div class="inner">
-						<h2>Menu</h2>
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
+							<li><a href="locations.html">Location & Hours</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 							<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
@@ -38,13 +38,12 @@
 					</div>
 				</nav>
 
+				<section id="banner2">
+					<div class="inner"></div>
+				</section>
+
 				<!-- Wrapper -->
 					<section id="wrapper">
-						<header>
-							<div class="inner">
-								<div class="banner2"></div>
-							</div>
-						</header>
 
 						<!-- Content -->
 							<div class="wrapper">
