formatted and filled subpages

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<li><a href="locations.html">Location & Hours</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
-					<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
+					<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
 					<li><a href="aboutus.html">About Us</a></li>
 				</ul>
 				<a href="#" class="close">Close</a>
@@ -53,7 +53,7 @@
 					<a href="https://www.creativenailsnspa.com/clover" class="image"><img src="images/clover.png" alt="" /></a>
 					<div class="content">
 						<h2 class="major">Creative <span style="color: green; font-weight: bold">X</span>  Clover Rewards</h2>
-						<p>Reach <span style="text-decoration:underline">100 points</span> to receive a disocunt on your next spa day! <br>Join our Rewards Program on Clover now.</p>
+						<p>Reach <span style="text-decoration:underline">100 points</span> to receive a discount on your next spa day! <br>Join our Rewards Program on Clover now.</p>
 						<a href="https://www.creativenailsnspa.com/clover" class="special ccolor">Learn more</a>
 					</div>
 				</div>
