--- a/services.html
+++ b/services.html
@@ -31,7 +31,7 @@
 							<li><a href="locations.html">Location & Hours</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
-							<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
+							<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
 							<li><a href="aboutus.html">About Us</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
