--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,7 @@
 							<li><a href="locations.html">Location & Hours</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
-							<li><a href="https://www.creativenailsnspa.com/clover">Clover Rewards</a></li>
+							<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
 							<li><a href="aboutus.html">About Us</a></li>
 						</ul>
 						<a href="#" class="close">Close</a>
@@ -52,15 +52,8 @@
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
-										</article>
-										<article>
-											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
-											<h3 class="major">Nisl placerat</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<h3 class="major">Est. 2001</h3>
+											<p>Our very first location was built in the old Greendale Mall in 2001. Since then we have expanded and adapted to match the expectations of our clients</p>
 										</article>
 									</section>
 
