index banner mobile fix

--- a/aboutus.html
+++ b/aboutus.html
@@ -42,9 +42,9 @@
 							<div class="wrapper">
 								<div class="inner">
 									<h3 class="major">About Us</h3>
-									<p>When it comes to feeling luxurious, Creative Nails & Spa provides the services you need with the customer service you expect.</p>
+									<p>When it comes to luxury, Creative Nails & Spa provides the services you need with the customer service you expect.</p>
 									<p> Our salons in Millbury, Shrewsbury and Worcester staff a team of knowledgeable, trained, and experienced technicians who are dedicated to providing the best experience possible. </p>
-									<p>Our nail spa offers quality manicures, pedicures, and acrylics to give you the look, confidence, and peace you've been searching for.</p>
+									<p>Our nail spa offers quality service including manicures, pedicures, and acrylics to give you the beauty and comfort you've been searching for.</p>
 
 									<!-- <h3 class="major">Vitae phasellus</h3> -->
 									<p>Looking for a nail spa offering catering services?  Our spa offers the space and technicians to provide you the fun and creativity for your bridal party, birthday party, or next ladies night out! </p>
