--- a/serene.html
+++ b/serene.html
@@ -52,7 +52,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Book your next event</h3>
-											<p>With ample private space and a soothing environment, Serene is a perfect place to host your next event.</p>
+											<p>With ample private space and a soothing environment, Serene is the perfect place to host your next event.</p>
 											<p>Call in to book an event with us! </p>
 											<a href="#" class="special">See Locations</a>
 										</article>
