--- a/aboutus.html
+++ b/aboutus.html
@@ -23,7 +23,7 @@
 					<div class="inner">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="locations.html">Location & Hours</a></li>
+							<li><a href="locations.html">Locations & Hours</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 							<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
@@ -53,7 +53,7 @@
 										<article>
 											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
 											<h3 class="major">Est. 2001</h3>
-											<p>Our very first location was built in the old Greendale Mall in 2001. Since then we have expanded and adapted to match the expectations of our clients</p>
+											<p>Our very first location was built in the old Greendale Mall in 2001. Since then we have expanded and adapted our salons to match the expectations of our clients</p>
 										</article>
 									</section>
 
