--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
 					<div class="inner">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="locations.html">Location & Hours</a></li>
+							<li><a href="locations.html">Locations & Hours</a></li>
 							<li><a href="services.html">Services</a></li>
 							<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 							<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
