--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 			<div class="inner">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="locations.html">Location & Hours</a></li>
+					<li><a href="locations.html">Locations & Hours</a></li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="https://bookings.gettimely.com/creativenailsspa/bb/book">Book Appointment</a></li>
 					<li><a href="https://www.creativenailsnspa.com/clover"><span style="color: green;">Clover Rewards</span></a></li>
@@ -62,10 +62,10 @@
 			<!-- Two -->
 			<section id="two" class="wrapper alt spotlight style2">
 				<div class="inner">
-					<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="image"><img src="images/appts.png" alt="" /></a>
+					<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="image"><img src="images/pic03.jpg" alt="" /></a>
 					<div class="content">
 
-						<h2 class="major" style="color:#5b5b5b">Book An Appointment Online</h2>
+						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #f1c79c">Book An Appointment Online</h2>
 						<p style="color:#5b5b5b">Schedule ahead on your own time.</p>
 						<a href="https://bookings.gettimely.com/creativenailsspa/bb/book" class="special"
 							style="color:#5b5b5b">Book Now</a>
@@ -78,9 +78,9 @@
 			<!-- Three -->
 			<section id="three" class="wrapper spotlight style3">
 				<div class="inner">
-					<a href="serene.html" class="image"><img src="images/pedi.jpg" alt="" style="margin-bottom: 20px"/></a>
+					<a href="serene.html" class="image"><img src="images/pic02.jpg" alt="" style="margin-bottom: 20px"/></a>
 					<div class="content">
-						<h2 class="major" style="color:#5b5b5b">Serene <span style="color:#fab88a">@</span> Park Avenue</h2>
+						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #e8e8e8">Serene <span style="color:#fab88a">@</span> Park Avenue</h2>
 						<p style="color:#7f7f7f">Learn about the newest addition to our Worcester location</p>
 						<a href="serene.html" class="special scolor">LEARN MORE</a>
 					</div>
@@ -89,10 +89,10 @@
 			<!-- Four -->
 			<section id="two" class="wrapper alt spotlight style5">
 				<div class="inner">
-					<a href="services.html" class="image"><img src="images/services.png" alt="" /></a>
+					<a href="services.html" class="image"><img src="images/pic01.jpg" alt="" /></a>
 					<div class="content">
 
-						<h2 class="major" style="color:#5b5b5b">Services</h2>
+						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #f3cde7">Services</h2>
 						<p style="color:#5b5b5b">Your satisfaction is our top priority. Our experienced and skillful technicians will lead you to a new level of comfort and beauty.</p>
 						<a href="services.html" class="special" style="color:#5b5b5b">See Services</a>
 
@@ -102,20 +102,20 @@
 			</section>
 			<section id="three" class="wrapper spotlight style6">
 				<div class="inner">
-					<a class="image"><img src="images/paper-plane.svg" alt="" /></a>
+					<a class="image"><img src="images/services.png" alt="" /></a>
 					<div class="content">
-						<h2 class="major" style="color:#7f7f7f">Mailing List</h2>
-						<p style="color:#7f7f7f">Join our mailing list and we'll keep you updated on
+						<h2 class="major" style="color:#5b5b5b; border-bottom: solid 2px #c3c3c3">Mailing List</h2>
+						<p style="color:#5b5b5b">Join our mailing list and we'll keep you updated on
 							promos, special events, discounts, updates, and more! </p>
 							<form method="post" action="#">
 								<div class="fields" >
 									<div class="field">
-										<label for="name" style="color:#7f7f7f; ">Name</label>
-										<input style="background-color:#c0c0c0" type="text" name="name" id="name" />
+										<label for="name" style="color:#5b5b5b; ">Name</label>
+										<input style="background-color:#cfd3d5" type="text" name="name" id="name" />
 									</div>
 									<div class="field">
-										<label for="email" style="color:#7f7f7f">Email</label>
-										<input style="background-color:#c0c0c0" type="email" name="email" id="email" />
+										<label for="email" style="color:#5b5b5b">Email</label>
+										<input style="background-color:#cfd3d5" type="email" name="email" id="email" />
 									</div>
 								</div>
 								<ul class="actions">
